# opensource-lakehouse

./: .gitignore  README.md  docker-compose.airflow.yaml  docker-compose.compute.yaml  docker-compose.storage.yaml  docker-compose.yaml
airflow/: Dockerfile  requirements.txt
airflow/dags/: ingest.py
airflow/dags/bronze/minio/: games_fifa.py  nytaxi_trip.py  zunami_subjects.py
airflow/dags/silver/: Dockerfile  dbt_project.yml  profiles.yml
airflow/dags/silver/models/games/fifa/: _schema.yml  _sources.yml  s_minio_games_fifa.sql
airflow/spark-apps/: bronze_subjects.py  create_schema.py  sparksession.py
airflow/spark-jobs/pyspark/extract/minio/: csv.py  parquet.py
dbt/dl/: dbt_project.yml  profiles.yml
dbt/images/: Dockerfile.clickhouse  Dockerfile.spark
hive-metastore/: Dockerfile  entrypoint.sh  metastore-site.xml
jupyter/: Dockerfile  requirements.txt
jupyter/work/: s3_iceberg_test.ipynb
kyuubi/: kyuubi-defaults.conf
spark/: Dockerfile  hive-site.xml  spark-defaults.conf
spark/dbt/: dbt_project.yml
spark/dbt/image/: Dockerfile  pyproject.toml
spark/thrift/: Dockerfile  hive-site.xml
